--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body class="dx-viewport">
     <app-root></app-root>
 </body>
 
