--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Sales Viewer by DevExpress</title><base href="https://devexpress.github.io/SalesViewer/"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="format-detection" content="telephone=no"/><link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.8790b4b97901e39078a3.bundle.css" rel="stylesheet"/><link href="dx.theme.carmine.b090c7a5ff2669f7d0be.bundle.css" rel="stylesheet"/><link href="dx.theme.darkmoon.170e00012230804f5dc7.bundle.css" rel="stylesheet"/><link href="dx.theme.greenmist.306aeca3dee28aa46b04.bundle.css" rel="stylesheet"/><link href="dx.theme.darkviolet.3a3224482fca0dd0a393.bundle.css" rel="stylesheet"/><link href="dx.theme.softblue.1b03fc6db8af9950c8ec.bundle.css" rel="stylesheet"/></head><body class="dx-viewport"><app-root></app-root><script type="text/javascript" src="inline.b10b9c0f5b970c60f87e.bundle.js"></script><script type="text/javascript" src="polyfills.56634dfca927c5f99d56.bundle.js"></script><script type="text/javascript" src="vendor.86fdc0fd38e2fadd0c5b.bundle.js"></script><script type="text/javascript" src="main.8b7ca26b8527a6a6dc64.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Sales Viewer by DevExpress</title>
+    <base href="https://devexpress.github.io/SalesViewer/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.fec1547d5d3c76b5e370.css"><link rel="stylesheet" href="dx.theme.carmine.3a45e38528eb8edccfce.css"><link rel="stylesheet" href="dx.theme.darkmoon.bf120f677a0856508a80.css"><link rel="stylesheet" href="dx.theme.greenmist.c787007875e0f27fb1ca.css"><link rel="stylesheet" href="dx.theme.darkviolet.12ed0c36204a3f1480cb.css"><link rel="stylesheet" href="dx.theme.softblue.ff5cad7ecd5a323ffd88.css"></head>
+
+<body class="dx-viewport">
+    <app-root></app-root>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.d0d839cd57b3e3ab281b.js" nomodule defer></script><script src="polyfills.796539e28761eb409424.js" defer></script><script src="main.25421262e30959558586.js" defer></script></body>
+
+</html>
